[package]
name = "get_unchecked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "fold"]}
quote = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"

[lib]
proc-macro = true