[package]
name = "unchecked"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "fold"]}
quote = "1.0"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true

[features]
unwrap = []